--- a/app/components/report-filter/template.hbs
+++ b/app/components/report-filter/template.hbs
@@ -56,7 +56,7 @@
   {{#if (contains 'review' _enabledFilters )}}
     <div class="grid-cell form-group" data-test-filter-review>
       <select class="form-control" onchange={{action (mut filters.review) value='target.value'}}>
-        <option value=""  selected={{if (not filters.review) 'selected'}}>Not filtered by review needed</option>
+        <option value="">Not filtered by review needed</option>
         <option value="1" selected={{if (eq filters.review '1') 'selected'}}>Only review needed</option>
         <option value="0" selected={{if (eq filters.review '0') 'selected'}}>Only review not needed</option>
       </select>
@@ -65,7 +65,7 @@
   {{#if (contains 'notBillable' _enabledFilters)}}
     <div class="grid-cell form-group" data-test-filter-not-billable>
       <select class="form-control" onchange={{action (mut filters.notBillable) value='target.value'}}>
-        <option value=""  selected={{if (not filters.notBillable) 'selected'}}>Not filtered by billability</option>
+        <option value="">Not filtered by billability</option>
         <option value="0" selected={{if (eq filters.notBillable '0') 'selected'}}>Only billable</option>
         <option value="1" selected={{if (eq filters.notBillable '1') 'selected'}}>Only not billable</option>
       </select>
@@ -74,9 +74,19 @@
   {{#if (contains 'notVerified' _enabledFilters)}}
     <div class="grid-cell form-group" data-test-filter-not-verified>
       <select class="form-control" onchange={{action (mut filters.notVerified) value='target.value'}}>
-        <option value=""  selected={{if (not filters.notVerified) 'selected'}}>Not filtered by verification</option>
+        <option value="">Not filtered by verification</option>
         <option value="0" selected={{if (eq filters.notVerified '0') 'selected'}}>Only verified</option>
         <option value="1" selected={{if (eq filters.notVerified '1') 'selected'}}>Only unverified</option>
+      </select>
+    </div>
+  {{/if}}
+  {{#if (contains 'billingType' _enabledFilters)}}
+    <div class="grid-cell form-group" data-test-filter-billing-type>
+      <select class="form-control" onchange={{action (mut filters.billingType) value='target.value'}}>
+        <option value="">All billing types</option>
+        {{#each billingTypes as |bt|}}
+          <option selected={{if (eq bt.id filters.billingType) 'selected'}} value={{bt.id}}>{{bt.name}}</option>
+        {{/each}}
       </select>
     </div>
   {{/if}}
