--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -4,7 +4,7 @@
   action             = (action 'change')
   class              = 'form-control'
   source             = source
-  placeholder        = 'Select user...'
+  placeholder        = placeholder
   async              = true
   minLength          = -1
   limit              = limit
