--- a/app/reschedule/template.hbs
+++ b/app/reschedule/template.hbs
@@ -7,9 +7,10 @@
     project     = _project
     task        = _task
     user        = _user
+    reviewer    = _reviewer
+    billingType = billing_type
     from        = _from
     to          = _to
-    billingType = billing_type
     review      = review
     notBillable = not_billable
     notVerified = not_verified
