Simplified syntax and removed redundancies

--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -45,7 +45,7 @@
       <tr>
         <td colspan="11" class="text-center">
           {{#if (is-array model)}}
-            I didn't find any results - try broadening your filters!
+            I didn't find any results - try loosening your filters!
           {{else}}
             Please specify some filter parameters.
           {{/if}}
