Show archived for the report filters

--- a/app/components/report-filter/template.hbs
+++ b/app/components/report-filter/template.hbs
@@ -6,6 +6,7 @@
   }}
     {{#task-selection
       history         = false
+      archived        = true
       on-set-customer = (action (mut filters.customer))
       on-set-project  = (action (mut filters.project))
       on-set-task     = (action (mut filters.task))
