Fixed some minor UX / UI issues
* Added missing placeholder
* Don't allow editing of verified reports
* Focus comment field after selecting a task in timesheet

--- a/app/components/report-reschedule-row/template.hbs
+++ b/app/components/report-reschedule-row/template.hbs
@@ -7,7 +7,7 @@
   <td class="form-group {{if changeset.error.task 'has-error'}}">{{t.task}}</td>
 {{/task-selection}}
 <td class="form-group">
-  {{input class='form-control' value=changeset.comment}}
+  {{input placeholder='Comment...' class='form-control' value=changeset.comment}}
 </td>
 <td class="form-group">
   {{sy-checkbox checked=changeset.review on-change=(action (mut changeset.review)) label='Needs review'}}
