--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -14,7 +14,7 @@
     {{input
       type        = 'text'
       class       = 'form-control'
-      placeholder = 'Comment...'
+      placeholder = 'Comment'
       name        = 'comment'
       value       = tracking.activity.comment
       disabled    = tracking.activity.active
