Allow user to select between page sizes 10, 20, 50 and 100

--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -14,8 +14,9 @@
 
 {{#paginated-table
   data-test-filter-results
-  pages=model.meta.pagination.pages
-  page=page
+  pages     = model.meta.pagination.pages
+  page      = page
+  page_size = page_size
 }}
   <thead>
     <tr>
