--- a/app/components/paginated-table/template.hbs
+++ b/app/components/paginated-table/template.hbs
@@ -3,7 +3,7 @@
   <tfoot>
     <tr>
       <td colspan="42">
-        {{pagination-pager current=page count=pages}}
+        {{pagination-pager current=page count=pages limit=page_size}}
       </td>
     </tr>
   </tfoot>
