Removed custom pagination-pager component and moved limit selection to paginated-table

--- a/app/components/paginated-table/styles.scss
+++ b/app/components/paginated-table/styles.scss
@@ -1,3 +1,15 @@
 tfoot tr td {
-  align-items: center;
+  nav,
+  .limit {
+    display: inline-block;
+  }
+
+  .limit {
+    margin-top: 5px;
+
+    span:not(:last-child)::after {
+      content: ',';
+      margin-left: -2px;
+    }
+  }
 }
