--- a/app/components/paginated-table/template.hbs
+++ b/app/components/paginated-table/template.hbs
@@ -3,7 +3,19 @@
   <tfoot>
     <tr>
       <td colspan="42">
-        {{pagination-pager current=page count=pages limit=page_size}}
+        {{pagination-pager current=page count=pages}}
+        <div class="limit pull-right">
+          Per page:
+          {{#each limits as |l i|}}
+            <span>
+              {{#if (eq page_size l)}}
+                {{l}}
+              {{else}}
+                <a href="#" {{action 'setLimit' l}}>{{l}}</a>
+              {{/if}}
+            </span>
+          {{/each}}
+        </div>
       </td>
     </tr>
   </tfoot>
