--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -1,14 +1,14 @@
-{{aupac-typeahead
-  name               = 'user'
-  selection          = selection
-  action             = (action 'change')
-  class              = 'form-control'
-  source             = source
-  placeholder        = placeholder
-  async              = true
-  minLength          = -1
-  limit              = limit
-  display            = display
-  transformSelection = transformSelection
-  suggestionTemplate = suggestionTemplate
-  }}
+{{yield (hash
+  user                 = (component 'power-select'
+    options            = users
+    disabled           = disabled
+    selected           = user
+    placeholder        = 'Select user...'
+    searchField        = 'longName'
+    onchange           = (action on-change)
+    extra              = (hash
+      selectedTemplate = selectedTemplate
+      optionTemplate   = optionTemplate
+    )
+  )
+)}}
