--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'reports';
 @import 'ember-power-calendar';
 @import 'ember-basic-dropdown';
+@import 'ember-power-select-custom';
 @import 'pod-styles';
 
 :root {
@@ -118,10 +119,6 @@ body {
   }
 }
 
-.grid-cell.form-group {
-  margin-bottom: 0;
-}
-
 .btn-group--auto .btn {
   flex-grow: 1;
 }
@@ -201,11 +198,6 @@ body {
       }
     }
   }
-}
-
-.twitter-typeahead .tt-menu {
-  width: auto;
-  cursor: pointer;
 }
 
 .force-white input {
