--- a/app/components/sy-timepicker/template.hbs
+++ b/app/components/sy-timepicker/template.hbs
@@ -2,6 +2,7 @@
   type="text"
   class="form-control"
   placeholder="--:--"
+  name={{name}}
   disabled={{disabled}}
   value={{displayValue}}
   pattern={{pattern}}
