--- a/app/components/welcome-modal/template.hbs
+++ b/app/components/welcome-modal/template.hbs
@@ -1,7 +1,7 @@
 {{#sy-modal visible=visible as |modal|}}
   {{#modal.body}}
     <div class="text-center">
-      <h1>Welcome to timed!</h1>
+      <h1>Welcome to Timed!</h1>
       <img style="max-width:50%" src="/assets/logo.svg">
       <h4>Would you like to take a tour?</h4>
     </div>
