--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -4,7 +4,7 @@
     disabled           = disabled
     selected           = customer
     placeholder        = 'Select customer...'
-    searchField        = 'name'
+    searchField        = 'longName'
     allowClear         = true
     onfocus            = (action 'handleFocus')
     onblur             = (action 'handleBlur')
