Use HTML maxlength attribute instead of manually preventing input length

--- a/app/components/sy-timepicker/template.hbs
+++ b/app/components/sy-timepicker/template.hbs
@@ -2,6 +2,7 @@
   type="text"
   class="form-control"
   placeholder="--:--"
+  maxlength=5
   name={{name}}
   disabled={{disabled}}
   value={{displayValue}}
