--- a/app/components/date-navigation/template.hbs
+++ b/app/components/date-navigation/template.hbs
@@ -1,11 +1,11 @@
 <div class="btn-group">
-  <button data-test-previous title="Previous" class="btn btn-default" {{action 'setPrevious'}}>
+  <button data-test-previous title="Previous day" class="btn btn-default" {{action 'setPrevious'}}>
     {{fa-icon 'arrow-left'}}
   </button>
   <button data-test-today title="Today" class="btn btn-default" {{action 'setToday'}}>
-    {{fa-icon 'arrow-down'}}
+    Today
   </button>
-  <button data-test-next title="Next" class="btn btn-default" {{action 'setNext'}}>
+  <button data-test-next title="Next day" class="btn btn-default" {{action 'setNext'}}>
     {{fa-icon 'arrow-right'}}
   </button>
 </div>
