Minor CSS syntax fix

--- a/app/components/record-button/styles.scss
+++ b/app/components/record-button/styles.scss
@@ -25,7 +25,7 @@
   border: none;
   cursor: pointer;
   background: radial-gradient(
-    circle
+    circle at center,
     rgb(240, 240, 240) 50%,
     rgb(180, 180, 180) 80%
   );
