--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -5,6 +5,8 @@
     selected           = user
     placeholder        = 'Select user...'
     searchField        = 'longName'
+    tagName            = 'div'
+    class              = 'user-select'
     onchange           = (action on-change)
     extra              = (hash
       selectedTemplate = selectedTemplate
