Show the absence type or the holiday name in the weekly overview on hover

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -17,6 +17,7 @@
             workday  = d.workday
             absence  = d.absence
             holiday  = d.holiday
+            prefix   = d.prefix
             on-click = (action (mut date))
             data-test-weekly-overview-day = (moment-format d.day 'DD')
           }}
