--- a/app/reschedule/template.hbs
+++ b/app/reschedule/template.hbs
@@ -9,8 +9,8 @@
     user        = _user
     reviewer    = _reviewer
     billingType = billing_type
-    from        = _from
-    to          = _to
+    fromDate    = _from
+    toDate      = _to
     review      = review
     notBillable = not_billable
     notVerified = not_verified
