Improved comboboxes and timesheet for smaller devices

--- a/app/styles/ember-power-select-custom.scss
+++ b/app/styles/ember-power-select-custom.scss
@@ -1,5 +1,9 @@
 @import 'ember-power-select';
 
+.ember-power-select-dropdown {
+  min-width: 250px;
+}
+
 .ember-power-select-options[role='listbox'] {
   max-height: 425px;
 }
